--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular": "^1.7.2",
     "angular-sanitize": "^1.7.2",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ng-file-upload": "^12.2.13",
